# movie-menu

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: deploy.yml
.mise/: config.toml
client/: .env.production  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
client/src/: App.tsx  api.ts  index.css  main.tsx  menuFile.ts  photos.ts  types.ts  utils.ts
client/src/components/: EditView.tsx  HmsInput.tsx  HomeScreen.tsx  JoinForm.tsx  RunningView.tsx
client/tests/: app.spec.ts
server/: Cargo.toml  Dockerfile
server/src/: error.rs  images.rs  lib.rs  main.rs  models.rs
server/src/routes/: images.rs  menus.rs  mod.rs
server/src/store/: dynamodb.rs  in_memory.rs  mod.rs
server/tests/: health_check.rs  images.rs  menus.rs
server/tests/common/: mod.rs
terraform/infrastructure/: dynamodb.tf  ecr.tf  locals.tf  main.tf  outputs.tf  s3.tf
terraform/upload/: data.tf  ecr_data.tf  iam.tf  lambda.tf  locals.tf  main.tf  website.tf
