[package]
name    = "tasting-shrek-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
aws-config         = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-dynamodb   = "1"
axum               = "0.8"
tower-http         = { version = "0.6", features = ["cors"] }
tokio              = { version = "1", features = ["full"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid               = { version = "1", features = ["v4", "serde"] }
thiserror          = "2"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"], default-features = false }
tokio   = { version = "1", features = ["full"] }
